Update CI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,12 +2,27 @@ version: 2
 jobs:
   build:
     docker:
-      - image: debian:stretch
+      - image: circleci/node
     steps:
       - checkout
+      - restore_cache:
+          name: Restore Yarn Package Cache
+          keys:
+            - yarn-packages-{{ checksum "yarn.lock" }}
       - run:
-          name: Greeting
-          command: echo Hello, world.
-      - run:
-          name: Print the Current Time
-          command: date
+          name: Install Dependencies
+          command: yarn install --frozen-lockfile
+      - save_cache:
+          name: Save Yarn Package Cache
+          key: yarn-packages-{{ checksum "yarn.lock" }}
+          paths:
+            - ~/.caches/yarn
+      - test:
+          name: Run Tests
+          command: yarn test
+      - lint:
+          name: Run Linting
+          command: yarn lint
+      - build:
+          name: Build Dist Files
+          command: yarn build
