--- a/package.json
+++ b/package.json
@@ -40,6 +40,16 @@
     "react-dom": ">=15.0.0"
   },
   "jest": {
-    "setupTestFrameworkScriptFile": "<rootDir>/tests/setupTestFramework.js"
+    "setupTestFrameworkScriptFile": "<rootDir>/tests/setupTestFramework.js",
+    "collectCoverageFrom": [
+        "src/**/*.js"
+    ],
+    "coverageThreshold": {
+        "global": {
+            "branches": 100,
+            "functions": 100,
+            "lines": 100
+        }
+    }
   }
 }
