--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "test": "jest",
     "lint": "eslint .",
     "fix": "eslint --fix .",
-    "build": "babel src -d lib"
+    "build": "babel src -d lib",
+    "contrib:add": "all-contributors add",
+    "contrib:generate": "all-contributors generate",
+    "contrib:check": "all-contributors check"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
     "@babel/core": "^7.1.6",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
+    "all-contributors-cli": "^5.4.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "enzyme": "^3.7.0",
@@ -42,7 +46,7 @@
   "jest": {
     "setupTestFrameworkScriptFile": "<rootDir>/tests/setupTestFramework.js",
     "collectCoverageFrom": [
-        "src/**/*.js"
+      "src/**/*.js"
     ]
   }
 }
