Update CI config for deployment

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build": "babel src -d lib",
     "contrib:add": "all-contributors add",
     "contrib:generate": "all-contributors generate",
-    "contrib:check": "all-contributors check"
+    "contrib:check": "all-contributors check",
+    "prepack": "yarn build"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
