Add clean command

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "contrib:add": "all-contributors add",
     "contrib:generate": "all-contributors generate",
     "contrib:check": "all-contributors check",
-    "prepack": "yarn build"
+    "prepack": "yarn clean && yarn build",
+    "clean": "rm -rf lib"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
