Update CI config to only publish on tags

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,4 +65,4 @@ workflows:
             tags:
               only: /^v.*/
             branches:
-              only: master
+              ignore: /.*/
