--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -37,6 +37,15 @@
       "contributions": [
         "infra"
       ]
+    },
+    {
+      "login": "jakebolam",
+      "name": "Jake Bolam",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/3534236?v=4",
+      "profile": "https://jakebolam.com",
+      "contributions": [
+        "doc"
+      ]
     }
   ]
 }
