--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -8,6 +8,7 @@
   ],
   "imageSize": 100,
   "commit": false,
+  "badgeTemplate": "[![All Contributors](https://img.shields.io/badge/all_contributors-<%= contributors.length %>-orange.svg?style=flat)](#contributors)",
   "contributors": [
     {
       "login": "msrose",
@@ -36,6 +37,15 @@
       "profile": "https://github.com/apps/greenkeeper",
       "contributions": [
         "infra"
+      ]
+    },
+    {
+      "login": "jakebolam",
+      "name": "Jake Bolam",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/3534236?v=4",
+      "profile": "https://jakebolam.com",
+      "contributions": [
+        "doc"
       ]
     }
   ]
