--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "with-immutable-props-to-js",
   "version": "0.1.0",
   "description": "A higher-order component for keeping Immutable objects outside your presentational components",
+  "keywords": [
+    "react",
+    "redux",
+    "immutable",
+    "selectors"
+  ],
   "main": "lib/index.js",
   "files": [
     "lib"
