--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,11 +12,9 @@ jobs:
       react_version:
         description: Version of React to install
         type: string
-        default: ""
       immutable_version:
         description: Version of Immutable to install
         type: string
-        default: ""
     steps:
       - checkout
       - restore_cache:
@@ -36,7 +34,7 @@ jobs:
           command: yarn add react<< parameters.react_version>>
       - run:
           name: Install Specific Immutable Version
-          command: yarn add react<< parameters.immutable_version>>
+          command: yarn add immutable<< parameters.immutable_version>>
       - run:
           name: Run Tests
           command: yarn test --coverage
