--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,16 +21,13 @@ commands:
         default: false
     steps:
       - run:
-          name: Install react<< parameters.react_version >>
-          command: yarn add --dev react<< parameters.react_version >> react-dom<< parameters.react_version >>
-      - run:
-          name: Install immutable<< parameters.immutable_version >>
-          command: yarn add --dev immutable<< parameters.immutable_version >>
+          name: Install react<< parameters.react_version >> and immutable<< parameters.immutable_version >>
+          command: yarn add --dev react<< parameters.react_version >> react-dom<< parameters.react_version >> immutable<< parameters.immutable_version >>
       - when:
           condition: << parameters.test_coverage >>
           steps:
             - run:
-                name: Run Tests for react<< parameters.react_version>> and immutable<< parameters.immutable_version >>
+                name: Run Tests for react<< parameters.react_version >> and immutable<< parameters.immutable_version >>
                 command: yarn test --coverage
             - run:
                 name: Upload Test Coverage
@@ -40,7 +37,7 @@ commands:
           condition: << parameters.test_coverage >>
           steps:
             - run:
-                name: Run Tests for react<< parameters.react_version>> and immutable<< parameters.immutable_version >>
+                name: Run Tests for react<< parameters.react_version >> and immutable<< parameters.immutable_version >>
                 command: yarn test
 
 jobs:
