--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "license": "MIT",
   "scripts": {
     "test": "jest",
-    "lint": "eslint .",
+    "lint": "eslint . --max-warnings 0",
     "fix": "eslint --fix .",
     "build": "babel src -d lib",
     "contrib:add": "all-contributors add",
@@ -39,6 +39,7 @@
     "enzyme-adapter-react-16": "^1.7.0",
     "eslint": "^5.9.0",
     "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-jest": "^22.0.0",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
     "immutable": "^4.0.0-rc.12",
