--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -47,6 +47,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "sanchitgera",
+      "name": "Sanchit Gera",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/8632167?v=4",
+      "profile": "http://www.sanchitgera.ca",
+      "contributions": [
+        "doc"
+      ]
     }
   ]
 }
