--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -45,7 +45,8 @@
       "avatar_url": "https://avatars2.githubusercontent.com/u/3534236?v=4",
       "profile": "https://jakebolam.com",
       "contributions": [
-        "doc"
+        "doc",
+        "infra"
       ]
     },
     {
