--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -45,6 +45,16 @@
       "avatar_url": "https://avatars2.githubusercontent.com/u/3534236?v=4",
       "profile": "https://jakebolam.com",
       "contributions": [
+        "doc",
+        "infra"
+      ]
+    },
+    {
+      "login": "sanchitgera",
+      "name": "Sanchit Gera",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/8632167?v=4",
+      "profile": "http://www.sanchitgera.ca",
+      "contributions": [
         "doc"
       ]
     }
