Send CircleCI Slack notifications for failures only on master branch.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -174,3 +174,9 @@ workflows:
             branches:
               only:
                 - master
+
+experimental:
+  notify:
+    branches:
+      only:
+        - master
