--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -66,6 +66,15 @@
       "contributions": [
         "infra"
       ]
+    },
+    {
+      "login": "monicamm95",
+      "name": "monicamm95",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/8105535?v=4",
+      "profile": "http://www.monicamoore.ca",
+      "contributions": [
+        "design"
+      ]
     }
   ]
 }
