--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
-    "hoist-non-react-statics": "^3.2.1",
     "immutable": "^4.0.0-rc.12",
     "jest": "^23.6.0",
     "prettier": "^1.15.2",
@@ -52,7 +51,6 @@
     "react-dom": "^16.6.3"
   },
   "peerDependencies": {
-    "hoist-non-react-statics": ">=3.0.0",
     "immutable": ">=3.0.0",
     "react": ">=15.0.0",
     "react-dom": ">=15.0.0"
@@ -62,5 +60,8 @@
     "collectCoverageFrom": [
       "src/**/*.js"
     ]
+  },
+  "dependencies": {
+    "hoist-non-react-statics": "^3.2.1"
   }
 }
