Add Dani to contributors

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -75,6 +75,15 @@
       "contributions": [
         "design"
       ]
+    },
+    {
+      "login": "danilomatamoros",
+      "name": "Danilo Matamoros",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/6589617?v=4",
+      "profile": "https://github.com/danilomatamoros",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
