--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "selectors"
   ],
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "files": [
     "lib"
   ],
@@ -19,7 +20,7 @@
     "test": "jest",
     "lint": "eslint . --max-warnings 0",
     "fix": "eslint --fix .",
-    "build": "babel src -d lib",
+    "build": "babel src -d lib && ncp ./src/index.d.ts ./lib/index.d.ts",
     "contrib:add": "all-contributors add",
     "contrib:generate": "all-contributors generate",
     "contrib:check": "all-contributors check",
@@ -46,6 +47,7 @@
     "eslint-plugin-react": "^7.11.1",
     "immutable": "^4.0.0-rc.12",
     "jest": "^24.1.0",
+    "ncp": "^2.0.0",
     "prettier": "^1.15.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3"
