--- a/package.json
+++ b/package.json
@@ -28,27 +28,27 @@
     "clean": "rm -rf lib"
   },
   "devDependencies": {
-    "@babel/cli": "^7.1.5",
-    "@babel/core": "^7.1.6",
-    "@babel/preset-env": "^7.1.6",
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@tophat/eslint-config": "^0.1.2",
-    "all-contributors-cli": "^6.1.1",
+    "all-contributors-cli": "^6.8.2",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^24.1.0",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.7.0",
-    "eslint": "^6.0.0",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-jest": "^22.6.3",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-prettier": "^3.0.0",
-    "eslint-plugin-react": "^7.11.1",
+    "babel-jest": "^24.9.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "eslint": "^6.3.0",
+    "eslint-config-prettier": "^6.2.0",
+    "eslint-plugin-jest": "^22.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.3",
     "immutable": "^4.0.0-rc.12",
-    "jest": "^24.1.0",
-    "prettier": "^1.15.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "jest": "^24.9.0",
+    "prettier": "^1.18.2",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0"
   },
   "peerDependencies": {
     "immutable": ">=3.0.0",
@@ -56,12 +56,14 @@
     "react-dom": ">=16.3.0"
   },
   "jest": {
-    "setupFilesAfterEnv": ["<rootDir>/tests/setupTestFramework.js"],
+    "setupFilesAfterEnv": [
+      "<rootDir>/tests/setupTestFramework.js"
+    ],
     "collectCoverageFrom": [
       "src/**/*.js"
     ]
   },
   "dependencies": {
-    "hoist-non-react-statics": "^3.2.1"
+    "hoist-non-react-statics": "^3.3.0"
   }
 }
