--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,6 @@
 {
-    "presets": ["@babel/preset-react", "@babel/preset-env"]
+    "presets": ["@babel/preset-react", "@babel/preset-env"],
+    "plugins": [
+        ["transform-react-remove-prop-types", { "removeImport": true }]
+    ]
 }
