--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "all-contributors-cli": "^6.9.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.9.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^6.3.0",
@@ -47,6 +48,7 @@
     "immutable": "^4.0.0-rc.12",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
