Only remove prop-types when building a release

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,10 @@
 {
     "presets": ["@babel/preset-react", "@babel/preset-env"],
-    "plugins": [
-        ["transform-react-remove-prop-types", { "removeImport": true }]
-    ]
+    "env": {
+        "production": {
+            "plugins": [
+                ["transform-react-remove-prop-types", { "removeImport": true }]
+            ]
+        }
+    }
 }
