--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test": "jest",
     "lint": "eslint . --max-warnings 0",
     "fix": "eslint --fix .",
-    "build": "babel src -d lib --copy-files",
+    "build": "NODE_ENV=production babel src -d lib --copy-files",
     "contrib:add": "all-contributors add",
     "contrib:generate": "all-contributors generate",
     "contrib:check": "all-contributors check",
